--- a/README.org
+++ b/README.org
@@ -11,4 +11,5 @@ Nothing to fancy either, but usefull
 * flake
 The flake.nix is usefull foreasily building both configs(using the scripts) and also for updating both of them in a easier way.
 
-It looks like this when it's built: [[./user/configs/screenshot.png]]
+It looks like this when it's built:
+[[file:users/configs/screenshot.png]]
