--- a/hm/configs/emacs.org
+++ b/hm/configs/emacs.org
@@ -3,7 +3,8 @@
 * better defaults
 #+begin_src emacs-lisp :tangle ./init.el
 
-  (setq gc-cons-threshold (* 50 1000 1000))
+  (setq gc-cons-threshold 100000000)
+  (setq read-process-output-max (* 1024 1024)) ;; 1mb
 
   ;; if not using dashboard
   ;; (setq inhibit-startup-message t)
@@ -25,7 +26,6 @@
   (tooltip-mode -1)
   (set-fringe-mode 10)
   (menu-bar-mode -1)
-  (recentf-mode 1)
   (save-place-mode 1)
   (set-language-environment "UTF-8")
   (prefer-coding-system 'utf-8)
@@ -34,17 +34,17 @@
   (set-keyboard-coding-system 'utf-8)
   (set-face-bold-p 'bold nil)
   (set-face-attribute 'default nil
-		      :family "Iosevka"
-		      ;; :family "Ttyp0"
-		      ;; :family "CaskaydiaCove Nerd Font Mono"
-		      ;; :family "FuraCode Nerd Font Mono"
-		      :height 140
-		      :width 'normal)
+                      :family "Iosevka"
+                      ;; :family "Ttyp0"
+                      ;; :family "CaskaydiaCove Nerd Font Mono"
+                      ;; :family "FuraCode Nerd Font Mono"
+                      :height 140
+                      :width 'normal)
 
   (defalias 'yes-or-no-p 'y-or-n-p)
 
   (dolist (mode '(org-mode-hook
-		  term-mode-hook))
+                  term-mode-hook))
     (add-hook mode (lambda () (display-line-numbers-mode 0))))
 
 #+end_src
@@ -54,8 +54,8 @@
   (require 'package)
 
   (setq package-archives '(("melpa" ."https://melpa.org/packages/")
-			   ("org" . "https:/orgmode.org/elpa/")
-			   ("elpa" . "https://elpa.gnu.org/packages/")))
+                           ("org" . "https:/orgmode.org/elpa/")
+                           ("elpa" . "https://elpa.gnu.org/packages/")))
 
   (package-initialize)
   (unless package-archive-contents
@@ -70,16 +70,22 @@
 
   (defvar bootstrap-version)
   (let ((bootstrap-file
-	 (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-	(bootstrap-version 5))
+         (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+        (bootstrap-version 5))
     (unless (file-exists-p bootstrap-file)
       (with-current-buffer
-	  (url-retrieve-synchronously
-	   "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
-	   'silent 'inhibit-cookies)
-	(goto-char (point-max))
-	(eval-print-last-sexp)))
+          (url-retrieve-synchronously
+           "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
+           'silent 'inhibit-cookies)
+        (goto-char (point-max))
+        (eval-print-last-sexp)))
     (load bootstrap-file nil 'nomessage))
+
+  (use-package auto-package-update
+    :custom
+    (setq auto-package-update-interval 7
+          auto-package-update-prompt-before-update t
+          auto-package-update-hide-results nil))
 
 #+END_SRC
 * keybindings and usage
@@ -88,7 +94,7 @@
 
   (defun evil-hook ()
     (dolist (mode '(custom-mode
-		    vterm-mode))
+                    vterm-mode))
       (add-to-list 'evil-emacs-state-modes mode)))
 
   (use-package evil
@@ -175,9 +181,9 @@
 
   (use-package vertico
     :bind (:map vertico-map
-		("C-j" . vertico-next)
-		("C-k" . vertico-previous)
-		("C-f" . vertico-exit))
+                ("C-j" . vertico-next)
+                ("C-k" . vertico-previous)
+                ("C-f" . vertico-exit))
     :custom
     (vertico-cicle t)
     :init
@@ -191,21 +197,77 @@
   (use-package helpful
     :commands helpful-mode)
 
+  (use-package projectile
+    :ensure t
+    :init
+    (projectile-mode +1)
+    :bind (:map projectile-mode-map
+                ("C-c p" . projectile-command-map)))
+
+  (use-package ibuffer
+    :ensure nil
+    :bind ("C-x C-b" . ibuffer)
+    :init (setq ibuffer-filter-group-name-face '(:inherit (font-lock-string-face bold)))
+    :config
+    ;; Display icons for buffers
+    (use-package all-the-icons-ibuffer
+      :init
+      ;;(setq all-the-icons-ibuffer-icon centaur-icon)
+      (all-the-icons-ibuffer-mode 1))
+
+    (with-eval-after-load 'counsel
+      (with-no-warnings
+        (defun my-ibuffer-find-file ()
+          (interactive)
+          (let ((default-directory (let ((buf (ibuffer-current-buffer)))
+                                     (if (buffer-live-p buf)
+                                         (with-current-buffer buf
+                                           default-directory)
+                                       default-directory))))
+            (counsel-find-file default-directory)))
+        (advice-add #'ibuffer-find-file :override #'my-ibuffer-find-file))))
+
+  ;; Group ibuffer's list by project root
+  (use-package ibuffer-projectile
+    :functions all-the-icons-octicon ibuffer-do-sort-by-alphabetic
+    :hook ((ibuffer . (lambda ()
+                        (ibuffer-projectile-set-filter-groups)
+                        (unless (eq ibuffer-sorting-mode 'alphabetic)
+                          (ibuffer-do-sort-by-alphabetic)))))
+    :config
+    (setq ibuffer-projectile-prefix
+          (concat
+           (all-the-icons-octicon "file-directory"
+                                  :face ibuffer-filter-group-name-face
+                                  :v-adjust 0.0
+                                  :height 1.0)
+           " ")
+          ))
+
+  ;; Show the version control status of the buffer
+  (use-package ibuffer-vc
+    :config
+    (add-hook 'ibuffer-hook
+              (lambda ()
+                (ibuffer-vc-set-filter-groups-by-vc-root)
+                (unless (eq ibuffer-sorting-mode 'alphabetic)
+                  (ibuffer-do-sort-by-alphabetic)))))
+
   (use-package consult
     :bind (("C-s" . consult-line)
-	   ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
-	   ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
-	   ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
-	   ("M-g e" . consult-compile-error)
-	   ("M-g f" . consult-flycheck)               ;; Alternative: consult-flycheck
-	   ("M-s G" . consult-git-grep)
-	   ("M-s r" . consult-ripgrep))
+           ("C-x b" . consult-buffer)                ;; orig. switch-to-buffer
+           ("C-x 4 b" . consult-buffer-other-window) ;; orig. switch-to-buffer-other-window
+           ("C-x 5 b" . consult-buffer-other-frame)  ;; orig. switch-to-buffer-other-frame
+           ("M-g e" . consult-compile-error)
+           ("M-g f" . consult-flycheck)               ;; Alternative: consult-flycheck
+           ("M-s G" . consult-git-grep)
+           ("M-s r" . consult-ripgrep))
 
     :hook (completion-list-mode . consult-preview-at-point-mode)
 
     :init
     (setq register-preview-delay 0
-	  register-preview-function #'consult-register-format)
+          register-preview-function #'consult-register-format)
     (advice-add #'register-preview :override #'consult-register-window)
     (advice-add #'completing-read-multiple :override #'consult-completing-read-multiple)
 
@@ -246,7 +308,7 @@
 
   (use-package vterm
     :custom (setq explicit-shell-file-name "zsh"
-		  term-prompt-regexp "^[^#$%>\n]*[#$%>] *")
+                  term-prompt-regexp "^[^#$%>\n]*[#$%>] *")
     :bind (("C-c e" . vterm)))
 
   (use-package vterm-toggle
@@ -254,42 +316,92 @@
 
   (setq eshell-prompt-regexp "^[^αλ\n]*[αλ] ")
   (setq eshell-prompt-function
-	(lambda nil
-	  (concat
-	   (if (string= (eshell/pwd) (getenv "HOME"))
-	       (propertize "~" 'face `(:foreground "#99CCFF"))
-	     (replace-regexp-in-string
-	      (getenv "HOME")
-	      (propertize "~" 'face `(:foreground "#99CCFF"))
-	      (propertize (eshell/pwd) 'face `(:foreground "#99CCFF"))))
-	   (if (= (user-uid) 0)
-	       (propertize " α " 'face `(:foreground "#FF6666"))
-	     (propertize " λ " 'face `(:foreground "#A6E22E"))))))
+        (lambda nil
+          (concat
+           (if (string= (eshell/pwd) (getenv "HOME"))
+               (propertize "~" 'face `(:foreground "#99CCFF"))
+             (replace-regexp-in-string
+              (getenv "HOME")
+              (propertize "~" 'face `(:foreground "#99CCFF"))
+              (propertize (eshell/pwd) 'face `(:foreground "#99CCFF"))))
+           (if (= (user-uid) 0)
+               (propertize " α " 'face `(:foreground "#FF6666"))
+             (propertize " λ " 'face `(:foreground "#A6E22E"))))))
 
-  (setq eshell-highlight-prompt nil) 
+  (setq eshell-highlight-prompt nil)
 
   (defalias 'open 'find-file-other-window)
   (defalias 'clean 'eshell/clear-scrollback)
 
+  (global-set-key (kbd "C-c s") 'async-shell-command)
+
 #+end_src
 ** Gnus
-#+begin_src emacs-lisp :tangle ./init.el 
+#+begin_src emacs-lisp :tangle ./init.el
 
   (use-package gnus)
 
   (setq user-mail-address "bequintao@gmail.com"
-	user-full-name "Basques")
+        user-full-name "Basques")
 
   (add-to-list 'gnus-secondary-select-methods '(nnimap "gmail"
-						       (nnimap-address "imap.gmail.com")  ; it could also be imap.googlemail.com if that's your server.
-						       (nnimap-server-port "imaps")
-						       (nnimap-stream ssl)
-						       (nnmail-expiry-target "nnimap+gmail:[Gmail]/Trash")  ; Move expired messages to Gmail's trash.
-						       (nnmail-expiry-wait immediate))) ; Mails marked as expired can be processed immediately.
+                                                       (nnimap-address "imap.gmail.com")  ; it could also be imap.googlemail.com if that's your server.
+                                                       (nnimap-server-port "imaps")
+                                                       (nnimap-stream ssl)
+                                                       (nnmail-expiry-target "nnimap+gmail:[Gmail]/Trash")  ; Move expired messages to Gmail's trash.
+                                                       (nnmail-expiry-wait immediate))) ; Mails marked as expired can be processed immediately.
 
   (setq smtpmail-smtp-server "smtp.gmail.com"
-	smtpmail-smtp-service 587
-	gnus-ignored-newsgroups "^to\\.\\|^[0-9. ]+\\( \\|$\\)\\|^[\"]\"[#'()]")
+        smtpmail-smtp-service 587
+        gnus-ignored-newsgroups "^to\\.\\|^[0-9. ]+\\( \\|$\\)\\|^[\"]\"[#'()]")
+
+  (use-package elfeed)
+  (use-package elfeed-org
+    :config
+    (elfeed-org)
+    (setq rmh-elfeed-org-files "~/.config/emacs/elfeed.org")
+    )
+
+  (use-package elfeed-goodies
+    :config
+    (setq elfeed-goodies/entry-pane-position 'bottom)
+    (elfeed-goodies/setup))
+#+end_src
+** recentf
+#+begin_src emacs-lisp :tangle ./init.el
+  (setq recentf-max-saved-items 50)
+
+  (defun ido-recentf-open ()
+    "Use `ido-completing-read' to \\[find-file] a recent file"
+    (interactive)
+    (if (find-file (ido-completing-read "Find recent file: " recentf-list))
+        (message "Opening file...")
+      (message "Aborting")))
+
+  (use-package recentf
+    :custom
+    (recentf-save-file   (expand-file-name "recentf" init-dir) )
+    (recentf-max-saved-items 200)
+    (recentf-exclude '(".gz" ".xz" ".zip" "/elpa/" "/ssh:" "/sudo:"))
+    :config
+    (recentf-mode 1)
+    :bind (("\C-x\ \C-r"  . counsel-recentf)))
+#+end_src
+** Grammar check
+#+begin_src emacs-lisp :tangle ./init.el
+  (use-package langtool
+    ;; :config (setq langtool-language-tool-server-jar (concat user-emacs-directory "/LanguageTool-4.8/languagetool-server.jar"))
+    :bind (("\C-x4w" . langtool-check)
+           ("\C-x4W" . langtool-check-done)
+           ("\C-x4l" . langtool-switch-default-language)
+           ("\C-x44" . langtool-show-message-at-point)
+           ("\C-x4c" . langtool-correct-buffer)))
+
+  (dolist (hook '(text-mode-hook))
+    (add-hook hook (lambda ()
+                     (flyspell-mode 1)
+                     (visual-line-mode 1)
+                     )))
 #+end_src
 ** Files
 *** dired
@@ -300,12 +412,15 @@
     :commands (dired dired-jump)
     :bind (("C-x C-j" . dired-jump))
     :custom ((dired-listing-switches "-agho --group-directories-first")
-	     (setq dired-omit-files "^\\.[^.].*")))
+             (setq dired-omit-files "^\\.[^.].*")))
 
   (use-package all-the-icons-dired
     :hook (dired-mode . all-the-icons-dired-mode))
 
   (use-package dired-git)
+
+  (use-package dired-sidebar
+    :bind (("C-c t" . dired-sidebar-toggle-sidebar)))
 
   (use-package dired-hide-dotfiles
     :hook (dired-mode . dired-hide-dotfiles-mode)
@@ -313,12 +428,15 @@
     (evil-collection-define-key 'normal 'dired-mode-map
       "H" 'dired-hide-dotfiles-mode))
 
+  (use-package dirvish)
+
 #+end_src
 *** treemacs
 #+begin_src emacs-lisp :tangle ./init.el
 
   (use-package treemacs
-    :bind (("C-c t" . treemacs)))
+    ;; :bind (("C-c t" . treemacs)))
+    )
 
   (use-package treemacs-evil
     :after (treemacs evil))
@@ -345,6 +463,12 @@
     :custom
     (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
 
+  (use-package magit-gitflow
+    :config
+    (add-hook 'magit-mode-hook 'turn-on-magit-gitflow))
+
+  ;; (load <path/to/repo>/toodoo)
+
 #+end_src
 ** misc
 #+begin_src emacs-lisp :tangle ./init.el
@@ -356,7 +480,7 @@
     :init (dired-async-mode 1))
 
   (setq auto-save-file-name-transforms
-	`((".*" ,(no-littering-expand-var-file-name "auto-save/") t)))
+        `((".*" ,(no-littering-expand-var-file-name "auto-save/") t)))
 
   (use-package crux
     :bind (("C-c D" . crux-delete-file-and-buffer)))
@@ -416,28 +540,28 @@
   (setq dashboard-set-navigator t)
   (setq dashboard-show-shortcuts t)
   (setq dashboard-items '((recents  . 5)
-			  (bookmarks . 5)
-			  (agenda . 10)))
+                          (bookmarks . 5)
+                          (agenda . 10)))
   (setq dashboard-set-file-icons t)
   (setq dashboard-set-navigator t)
   (setq dashboard-navigator-buttons
-	`(;; line1
-	  ((,nil
-	    "agenda"
-	    "opens org-agenda"
-	    (lambda (&rest _) (org-agenda))
-	    'default)
-	   (nil
-	    "open the emacs.org"
-	    "Opens the config file"
-	    (lambda (&rest _) (config-visit))
-	    'default)
-	   (nil
-	    "new scratch buffer"
-	    "Opens a scratch buffer"
-	    (lambda (&rest _) (create-scratch-buffer))
-	    'default)
-	   )))
+        `(;; line1
+          ((,nil
+            "agenda"
+            "opens org-agenda"
+            (lambda (&rest _) (org-agenda))
+            'default)
+           (nil
+            "open the emacs.org"
+            "Opens the config file"
+            (lambda (&rest _) (config-visit))
+            'default)
+           (nil
+            "new scratch buffer"
+            "Opens a scratch buffer"
+            (lambda (&rest _) (create-scratch-buffer))
+            'default)
+           )))
 
   (setq initial-buffer-choice (lambda () (get-buffer "*dashboard*")))
 
@@ -460,6 +584,19 @@
     ;; :custom (setq highlight-indent-guides-method 'bitmap)
     :hook (prog-mode . highlight-indent-guides-mode))
 
+  (use-package hl-todo
+    :diminish hl-todo
+    :config
+    (setq hl-todo-highlight-punctuation ":"
+          hl-todo-keyword-faces
+          `(("TODO"       warning bold)
+            ("FIXME"      error bold)
+            ("HACK"       font-lock-constant-face bold)
+            ("REVIEW"     font-lock-keyword-face bold)
+            ("NOTE"       success bold)
+            ("DEPRECATED" font-lock-doc-face bold)))
+    (add-hook 'prog-mode-hook #'hl-todo-mode))
+
   (setq highlight-indent-guides-method 'bitmap)
 
 #+end_src
@@ -467,7 +604,7 @@
 #+begin_src emacs-lisp :tangle ./init.el
 
   (setq display-time-format "%H:%M"
-	display-time-default-load-average nil)
+        display-time-default-load-average nil)
 
   (use-package mood-line
     :init (mood-line-mode)(display-time-mode)(display-battery-mode))
@@ -476,11 +613,11 @@
 ** Colorscheme
 #+begin_src emacs-lisp :tangle ./init.el
 
-    (use-package doom-themes :defer t)
-    (use-package spacemacs-theme :defer t)
-    (use-package nano-theme :defer t)
+  (use-package doom-themes :defer t)
+  (use-package spacemacs-theme :defer t)
+  (use-package nano-theme :defer t)
 
-    (consult-theme 'doom-solarized-dark-high-contrast)
+  (consult-theme 'doom-solarized-dark-high-contrast)
 
   (defun toggle-theme ()
     (interactive)
@@ -541,6 +678,8 @@
         org-directory  "~/Docs/org/"
         org-todo-keywords '((sequence "TODO" "|" "DONE")))
 
+  (use-package org-super-agenda
+    :commands (org-super-agenda-mode))
 
   (defun my-org-archive-done-tasks ()
     (interactive)
@@ -617,8 +756,15 @@
 
   (use-package org-journal
     :config (setq org-journal-dir "~/Docs/org/journal/")
-    :bind (("C-c j n" . org-journal-new-entry)
-           ("C-c j s" . org-journal-search)))
+    :bind
+    ("C-c j n" . org-journal-new-entry)
+    :custom
+    (org-journal-date-prefix "#+title: ")
+    (org-journal-file-format "%Y-%m-%d.org")
+    (org-journal-dir "~/stack/roam/")
+    (org-journal-date-format "%A, %d %B %Y")
+    (org-journal-enable-agenda-integration t)
+    )
 
 #+end_src
 ** org present
@@ -659,12 +805,20 @@
 
   (use-package pandoc)
   (use-package ox-pandoc)
+
   (use-package pdf-tools
-    :mode ("\\.[pP][dD][fF]\\'" . pdf-view-mode)
-    :magic ("%PDF" . pdf-view-mode)
     :config
     (pdf-tools-install)
-    (define-pdf-cache-function pagelabels))
+    (define-pdf-cache-function pagelabels=)
+    (setq pdf-view-resize-factor 1.1)
+    (define-key pdf-view-mode-map (kbd "C-s") 'isearch-forward))
+
+
+  (use-package org-noter
+    :after org-noter-pdftools
+    :config
+    (require 'org-noter-pdftools)
+    (setq org-noter-auto-save-last-location t))
 
 #+end_src
 ** org capture
@@ -739,6 +893,10 @@
           lsp-ui-doc-delay 0.2
           lsp-ui-flycheck-enable t))
 
+  ;;   (use-package eglot
+  ;; :hook (LaTeX-mode-hook . eglot-ensure)
+  ;; :config (setq eglot-autoreconnect t))
+
 #+end_src
 ** debuging
 #+begin_src emacs-lisp :tangle ./init.el
@@ -779,6 +937,8 @@
 
   (use-package go-mode
     :hook (go-mode . lsp-deferred))
+
+  (use-package go-snippets)
 
   (use-package flycheck-golangci-lint)
 
@@ -993,7 +1153,11 @@
   (use-package eldoc
     :custom (lsp-eldoc-render-all t))
 
-  (use-package yasnippet)
+  (use-package yasnippet
+    :commands yas-minor-mode
+    :config
+    (yas/global-mode 1)
+    (add-to-list 'yas-snippet-dirs (concat init-dir "snippets")))
 
   (setq gc-cons-threshold (* 50 1000 1000))
 #+end_src
